2008-03-03  Bill Skaggs  <weskaggs@primate.ucdavis.edu>

	* menus/image-menu.xml.in:  Simplify menu by moving some
	of the less-used categories inside others.

2008-02-18  Bill Skaggs  <weskaggs@primate.ucdavis.edu>

	* libgimpwidgets/gimpwidgets.h: Include gimpscalecontrol.h
	
	* libgimpwidgets/gimppropwidgets.c (gimp_prop_scale_entry_new):
	Use scale control rather than scale entry.

	* app/tools/gimppaintoptions-gui.c
	* app/tools/gimpinkoptions-gui.c
	* app/tools/gimpforegroundselectoptions.c
	* app/tools/gimpcoloroptions.c: corresponding tweaks.

2008-02-18  Bill Skaggs  <weskaggs@primate.ucdavis.edu>

	* libgimpwidgets/gimpscalecontrol.h
	* libgimpwidgets/gimpscalecontrol.c: New widget intended
	to replace scale entries.

	* libgimpwidgets/gimpwidgetstypes.h
	* libgimpwidgets/Makefile.am: Changed accordingly.
	(will need to add functions to gimpwidgets.def eventually)
	
2008-02-18  Bill Skaggs  <weskaggs@primate.ucdavis.edu>

	* app/widgets/gimpwidgets-constructors.c: Enable tearoff
	mode menus.
	
2008-02-15  Bill Skaggs  <weskaggs@primate.ucdavis.edu>

	Merge 24846:24891 from trunk.
	
2008-02-15  Bill Skaggs  <weskaggs@primate.ucdavis.edu>

	Clean up code for two-column toolbox.
	
	* app/actions/dialogs-commands.c
	* app/widgets/gimptoolbox.c
	* app/widgets/gimpdialogfactory.c
	* app/widgets/gimpwidgets-constructors.c
	* app/widgets/gimpsessioninfo-book.c
	* app/widgets/gimpdatafactoryview.c
	* app/widgets/gimpsessioninfo-book.h
	* app/widgets/gimpdockbook.c
	* app/widgets/gimpdockbook.h
	* app/widgets/gimpsessioninfo-dock.c
	* app/widgets/gimpdockable.c
	* app/widgets/gimpdock.c
	* app/widgets/gimpdock.h
	* app/widgets/gimpdockseparator.c
	* app/widgets/gimpdockseparator.h

2008-02-15  Bill Skaggs  <weskaggs@primate.ucdavis.edu>

	* app/widgets/gimptooloptionseditor.c: Remove shadow
	from viewport.

2008-02-15  Bill Skaggs  <weskaggs@primate.ucdavis.edu>

	* app/widgets/gimpcontainerentry.[ch]
	* app/widgets/gimpviewablebox.[ch]: Change appearance of